apps/base/litellm/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: litellm
  namespace: ai
spec:
  parentRefs:
    - name: homelab
      namespace: gateway
  hostnames:
    - litellm.leotsgo.dev
  rules:
    - backendRefs:
        - name: litellm
          port: 4000
